data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_904.wast
;; 5. **Br Across Function Boundaries:**    Integrate a `br` instruction that appears to target a block inside a current function but is actually outside its scope, ensuring implementations appropriately manage function call boundaries and return sequences while handling invalid targets.

(assert_invalid
  (module
    (func $invalid-br-across-boundary
      (block (br 1)) ;; Attempting to branch outside the function's defined blocks
      (return)
    )
  )
  "label index out of range"
)